fix header image on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -123,8 +123,8 @@ header h1 {
 }
 
 header img {
-    height: 3.5rem;
     margin: 0 0.5rem;
+    height: fit-content;
 }
 
 header p {
@@ -515,6 +515,7 @@ h2:hover a .anchor-hint {
 
     header img {
         height: 1.7rem;
+        width: auto;
         margin-left: 0.2rem;
         margin-right: 0.2rem;
     }
